--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1>Jennie caña</h1>
         </div>
         <div id="columna-uno"> 
-            <img class="foto" src="images/imagen.jpg" alt="perfil" /> 
+            <img class="foto" src="imagen.jpg" alt="perfil" /> 
             <div class="datos">
                 <p> <span class="fa-solid fa-envelope"></span> <strong> email: </strong>jennie.reed@ejemplo.com</p>
                 <p> <span class="fa-solid fa-phone"></span> <strong> Telefono: </strong> (218)5079836</p>
